Added Documentation section

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -55,9 +55,10 @@ In terms of animation, we hope that a real-time rendering of the fluid simulatio
 
 For example; during smoke simulation the temperature must be calculated at each point in the volume so that the appearance of hot smoke rising and cold smoke falling to the ground can be correctly modeled. In the case of simulating fire, it is required to keep track of how long it has been since the fuel was ignited. This provides the means to model how the fuel becomes exhausted.
 
-
 \section{Documentation}
+We want to keep a good structure for our work. Documentation of the project is mostly done in Google Drive, whereas our code (including Tex code) is available on GitHub.
 
+We update a detailed hourly log to make sure we reach our deadlines in time and so that we do not work more or less than we have planned.
 
 \section{Plan of the work}
 	
