Added new section and subsection

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -61,6 +61,13 @@ We want to keep a good structure for our work. Documentation of the project is m
 We update a detailed hourly log to make sure we reach our deadlines in time and so that we do not work more or less than we have planned.
 
 \section{Plan of the work}
-	
+Our time plan is calculated as that every team member works two days a week with the project. This will allow for the group to spend time on this project as well as the course TNM094 which is done in parallell to this course.
+
+ \subsection{Team}
+Niklas Andersson	nikan278	Developer
+Gabriel Baravdish	gabba873	Developer
+Joakim Deborg	joade361	Developer
+Kristofer Janukiewicz	krija286	Developer
+Marcus Nygren	marny568	Developer, Interaction
 
 \end{document}
