--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -35,6 +35,7 @@
 
 \setcounter{page}{1}
 
+\chapter{Proposal}
 
 \section{Prelude}
 The aim for the project is to create a fluid simulation and visualize it in real-time. Simulation of various fluids can be done by e.g. modify the parameters of the Navier-Stokes equations and change the rendering method.
