Added time plan

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -62,6 +62,24 @@ We update a detailed hourly log to make sure we reach our deadlines in time and 
 \section{Plan of the work}
 Our time plan is calculated as that every team member works two days a week with the project. This will allow for the group to spend time on this project as well as the course TNM094 which is done in parallell to this course.
 
+\subsection{Time plan}
+Week 4: Decide on idea \\
+Week 5: Proposal and research \\
+Week 6: Implementation in MATLAB \\
+Week 7: Implementation in MATLAB \\
+Week 8: Implementation in C++ \\
+Week 9: Implementation in C++ \\
+Week 10: Implementation in C++, report \\
+Week 11: Report \\
+Week 12: Prepare for oral presentation \\
+Week 13: Prepare for oral presentation
+
+\subsection{Deadlines}
+Week 4: 29/1, 9 AM: Submit proposal \\
+Week 7: 13/2, 1-5 PM: Mid-term seminar \\
+Week 11: 14/3, 12 PM: Project deadline, programs and report \\
+Week 13: Oral presentation \\
+
  \subsection{Team}
 Niklas Andersson	nikan278	Developer\\
 Gabriel Baravdish	gabba873	Developer\\
