Added time plan

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -65,20 +65,18 @@ Our time plan is calculated as that every team member works two days a week with
 \subsection{Time plan}
 Week 4: Decide on idea \\
 Week 5: Proposal and research \\
+- Deadline: 29/1, 9 AM: Submit proposal \\
 Week 6: Implementation in MATLAB \\
-Week 7: Implementation in MATLAB \\
+Week 7: Implementation in MATLAB + C++ in parallel \\
+- Deadline 13/2, 1-5 PM: Mid-term seminar \\
 Week 8: Implementation in C++ \\
 Week 9: Implementation in C++ \\
 Week 10: Implementation in C++, report \\
 Week 11: Report \\
+- Deadline 14/3, 12 PM: Project deadline, programs and report \\
 Week 12: Prepare for oral presentation \\
-Week 13: Prepare for oral presentation
-
-\subsection{Deadlines}
-Week 4: 29/1, 9 AM: Submit proposal \\
-Week 7: 13/2, 1-5 PM: Mid-term seminar \\
-Week 11: 14/3, 12 PM: Project deadline, programs and report \\
-Week 13: Oral presentation \\
+Week 13: Prepare for oral presentation \\
+- Deadline: Oral presentation
 
  \subsection{Team}
 Niklas Andersson	nikan278	Developer\\
