Change the names a bit.

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -76,11 +76,11 @@ Week 13: Prepare for oral presentation \\
 - Deadline: Oral presentation
 
  \subsection{Team}
-Niklas Andersson	nikan278	Developer\\
-Gabriel Baravdish	gabba873	Developer\\
-Joakim Deborg	joade361	Developer\\
-Kristofer Janukiewicz	krija286	Developer\\
-Marcus Nygren	marny568	Developer, Interaction
+Niklas Andersson - nikan278 - Developer\\
+Gabriel Baravdish - gabba873 - Developer\\
+Joakim Deborg - joade361 - Core Developer\\
+Kristofer Janukiewicz - krija286 - Developer\\
+Marcus Nygren - marny568 - Developer, Interaction
 
 
 \end{document}
