--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -37,19 +37,29 @@
 \section{Prelude}
 The aim for the project is to create a fluid simulation and visualize it in real-time. Simulation of various fluids can be done by e.g. modify the parameters of the Navier-Stokes equations and changing the rendering method.
 
+ \subsection{Team}
+Niklas Andersson - nikan278 - Developer\\
+Gabriel Baravdish - gabba873 - Developer\\
+Joakim Deborg - joade361 - Core Developer\\
+Kristofer Janukiewicz - krija286 - Developer\\
+Marcus Nygren - marny568 - Developer, Interaction
+
 \section{Description of the physical system}
 The Navier-Stokes equations used for the fluid simulation:\\\\
 \(\frac{du}{dt} = - (\textbf{u}\cdot{\nabla})\textbf{u} - \frac{1}{\rho}\nabla p + v \nabla^2 \textbf{u} + \textbf{F}\) \\\\
 \(\nabla \cdot \textbf{u} = 0 \)
 
 \section{Simulation of the system}
-A pre-study will be done in Matlab to get a basic understanding for how the system works. The simulation will later be implemented in C++ with OpenGL and GLSL were the majority of calculations are performed on GPU. When simulating the fluids we will benefit heavily from the GPU being optimized for performing the same operations on different data in parallel.
+A pre-study will be done in Matlab to get a basic understanding for how the system works. The simulation will later be implemented in C++ with OpenGL and GLSL where the majority of calculations are performed on GPU. When simulating the fluids we will benefit heavily from the GPU being optimized for performing the same operations on different data in parallel.
 
 \section{Implementation of the animation}
 Since we aim to animate different kinds of fluids we will need to visualize different characteristics of each unique fluid.
 For example; during smoke simulation the temperature must be calculated at each point in the volume so that the appearance of hot smoke rising and cold smoke falling to the ground can be correctly modeled. In the case of simulating fire, it is required to keep track of how long it has been since the fuel was ignited. This provides the means to model how the fuel becomes exhausted.
-Things become a bit more complicated when dealing with water since we are no longer interested in visualizing the advection of density throughout the volume but rather the boundary between air and water. By first initializing each voxel with how far it is from the surface of water and then letting this property be carried throughout the simulation we know that the surface is were this value is exactly equal to zero.\\\\
-Since the simulation will be calculated throughout a 3-dimensional volume of voxels, a volume rendering technique will be ideal for visualization purposes.The volume renderer will be created as a fragment-shader program   in GLSL running on the GPU.\\
+Things become a bit more complicated when dealing with water since we are no longer interested in visualizing the advection of density throughout the volume but rather the boundary between air and water. By first initializing each voxel with how far it is from the surface of water and then letting this property be carried throughout the simulation we know that the surface is where this value is exactly equal to zero.
+
+
+Since the simulation will be calculated throughout a 3-dimensional volume of voxels, a volume rendering technique will be ideal for visualization purposes.The volume renderer will be created as a fragment-shader program   in GLSL running on the GPU.
+
 We hope that a real-time rendering of the fluid simulation will allow the user to interact with the simulation by e.g. modifying the mathematical parameters or through direct physical interaction.\\
 
 \section{Documentation}
@@ -74,13 +84,5 @@ Week 11: Report \\
 Week 12: Prepare for oral presentation \\
 Week 13: Prepare for oral presentation \\
 - Deadline: Oral presentation
-
- \subsection{Team}
-Niklas Andersson - nikan278 - Developer\\
-Gabriel Baravdish - gabba873 - Developer\\
-Joakim Deborg - joade361 - Core Developer\\
-Kristofer Janukiewicz - krija286 - Developer\\
-Marcus Nygren - marny568 - Developer, Interaction
-
 
 \end{document}
