--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -58,14 +58,11 @@ All the documents created will be saved in Google Drive, whereas our code (inclu
 We keep a detailed log to make sure we reach our deadlines in time and so that we do not work more or less than we have planned.
 
 \section{Plan of the work}
-Our time plan is calculated as that every team member works two days a week with the project. This will allow for the group to spend time on this project as well as the course TNM094 which is done in parallell to this course.
-
-\subsection{Time plan}
 Week 4: Decide on idea \\
-Week 5: Proposal and research \\
+Week 5: Proposal and research and Matlab implementation\\
 - Deadline: 29/1, 9 AM: Submit proposal \\
-Week 6: Implementation in MATLAB \\
-Week 7: Implementation in MATLAB + C++ in parallel \\
+Week 6: Implementation in Matlab \\
+Week 7: Implementation in Matlab + C++ in parallel \\
 - Deadline 13/2, 1-5 PM: Mid-term seminar \\
 Week 8: Implementation in C++ \\
 Week 9: Implementation in C++ \\
