Added contact information

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -38,11 +38,11 @@
 The aim for the project is to create a fluid simulation and visualize it in real-time. Simulation of various fluids can be done by e.g. modify the parameters of the Navier-Stokes equations and changing the rendering method.
 
  \subsection{Team}
-Niklas Andersson - nikan278 - Developer\\
-Gabriel Baravdish - gabba873 - Developer\\
-Joakim Deborg - joade361 - Core Developer\\
-Kristofer Janukiewicz - krija286 - Developer\\
-Marcus Nygren - marny568 - Developer, Interaction
+Niklas Andersson, nikan278@student.liu.se - Developer\\
+Gabriel Baravdish, gabba873@student.liu.se - Developer\\
+Joakim Deborg, joade361@student.liu.se - Core Developer\\
+Kristofer Janukiewicz, krija286@student.liu.se - Developer\\
+Marcus Nygren, marny568@student.liu.se - Developer, Interaction
 
 \section{Description of the physical system}
 The Navier-Stokes equations used for the fluid simulation:\\\\
